# microservice-python

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/01_py-fundamentals/: 00_py-funda.md  01_kickoff.md  99_references.md
docs/02_funda/: 00_py-funda.md  01_kickoff.md  02_global-function.md  04_programing-style.md
docs/02_webapp/: index.md
docs/03_leetcode/ds+algo/: 00_ds+algo-start.md
docs/03_web/: index.md
docs/2021-2025/01_python-basic-notes/: 00_py-funda.md  03_module+DP.md
docs/2021-2025/03_dataStructure-algorithm/: 01_sliding_window.md
docs/2021-2026/01_python-basic-notes/: 01_kickoff.md  05_useful_function.md
src/leetcode/: leetcode_01_py_tips.md  leetcode_02_sql-tips.md  set-0001-0010.py
src/leetcode/exponent/: 01_problem.py
src/leetcode/top_150/: leetcode-0003.py  leetcode-0026+0080.py  leetcode-0027.py  leetcode-0030-0209.py  leetcode-0055.py  leetcode-0088.py  leetcode-0134-0238-0380.py  leetcode-0169-0171.py  leetcode-0172.py  leetcode-0189-0191-0014-0392.py
src/leetcode/top_75/: hashmap-set.py  prefix-sum.py  sliding-window.py  stack.py  string-array.py  two-pointers.py
src/pyBasicModule/: README.md
src/pyBasicModule/year2021/: main2021.py
src/pyBasicModule/year2025/: main2025.py
src/systemDesign/paypal/: mkdocs.yml
src/system_design/paypal/: requirements.txt
src/webApp1/: README.md  docker-compose-postgres.yml
src/webApp1/controller/: github_oauth_implicit.py  jwt_token_generator.py  okta_oauth.py  web2.py  web_client.py
src/web_module/: webmain.py
src/web_module/controller/: github_oauth_cc.py  web2.py  (+3 more)
(+81 files in other folders)
