[project]
name = "microservice-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "authlib>=1.6.7",
    "fastapi>=0.128.3",
    "fastapi-cache2>=0.2.2",
    "fastapi-limiter>=0.2.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis[asyncio]>=7.1.0",
    "uvicorn>=0.40.0",
]
